# spelungit

./: .bandit  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install-remote.sh  install.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-lite.txt  requirements.txt  setup.cfg
.github/docs/: IMPROVEMENT_ROADMAP.md  OBSERVABILITY_INTEGRATION.md  STAGE_3_SEARCH_OPTIMIZATION.md
.github/workflows/: ci.yml
src/spelungit/: __init__.py  cli.py  config.py  embeddings.py  errors.py  exceptions.py  git_integration.py  git_operations.py  git_scanner.py  indexer.py  lite_embeddings.py  lite_server.py  models.py  repository_utils.py  search_engine.py  server.py  sqlite_database.py
src/spelungit/search/: __init__.py  cache.py
tests/: __init__.py  conftest.py  test_auto_update.py  test_config.py  test_database.py  test_embeddings.py  test_errors.py  test_repository_utils.py
