[metadata]
name = git-history-mcp
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.13

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    git-history-mcp = git_history_mcp.server:main
    git-history-cli = git_history_mcp.cli:main
